# uberwald

./: .gitignore  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  Makefile  README.org  default.nix
cmake/Modules/: FindReadline.cmake
doc/: conf.py  index.rst  manual.html  manual.org
doc/api/: index.rst
doc/api/core/: env.rst  eval.rst  heap.rst  index.rst  object.rst  overview.rst  runtime.rst  stack.rst  stbl.rst
examples/: hello.lisp  pgp-wordlist.ubw
hashbench/: hashbench.c
lisp/: keywords.ubw  selfdesc.ubw
src/: cli.c  common.h  config.h.in  containers.c  containers.h  defn.h  env.h  eval.c  eval.h  heap.c  heap.h  lisp_types.c  lisp_types.h  ltypes.c  ltypes.h  mkcontainers.sh  object.c  object.h  print.c  print.h  read.c  read.h  runtime.h  stack.c  stack.h  stbl.c  stbl.h  store.c  store.h  symbol.h  symtbl.c  symtbl.h  uberwald.c  uberwald.h
src/cli/: cli.c
src/tpl/: stack.tpl.c  stack.tpl.h
tests/: ltypes_test.c  main.c  object_test.c  read_test.c  stack_test.c  stbl_test.c  symtbl_test.c  ubwtest.h
